MDEV-14762 Server crashes in MDL_ticket::has_stronger_or_equal_type upon inserting into temporary sequence

Fix is to not upgrade MDL locks for temporary tables